fix: Deletando arquivo CorsConfig e configurando CORS dentro de securityConfigurations